Fix layout bug on short pages

--- a/css/initial.css
+++ b/css/initial.css
@@ -70,6 +70,7 @@ body {
 
 main {
     position: relative;
+    box-sizing: border-box;
 	min-height: 100vh;
     max-width: var(--GW-body-max-width);
     margin: 0 auto;
